force-app/main/default/objects/Project__c/fields/EstimatedHours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedHours__c</fullName>
    <label>EstimatedHours</label>
    <summarizedField>ProjectLineItem__c.EstimatedHours__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>